--- a/index.html
+++ b/index.html
@@ -70,6 +70,6 @@
         <input type="text" id="game-input" placeholder="請輸入指令...">
         <button id="submit-btn">送出</button>
     </div>
-    <script src="main.js"></script>
+    <script src="main.js?v=20251123-1"></script>
 </body>
 </html>
