--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <div id="game-container">
         <div id="header-area">
             <h1>Egypt Adventures</h1>
-            <div id="language-selector" style="position: absolute; top: 10px; right: 20px;">
-                <select id="language-select" style="padding: 5px; font-size: 14px; border: 2px solid #8b6914; background: #f4e4c1; cursor: pointer;">
-                    <option value="zh-TW">繁體中文</option>
-                    <option value="en">English</option>
-                    <option value="fr">Français</option>
+            <div id="language-selector" style="position: absolute; top: 10px; right: 20px; z-index: 100;">
+                <select id="language-select" style="padding: 8px 12px; font-size: 16px; border: 2px solid #8b6914; background: #f4e4c1; cursor: pointer; border-radius: 5px; font-weight: bold; box-shadow: 0 2px 5px rgba(0,0,0,0.2);">
+                    <option value="zh-TW">🇹🇼 繁體中文</option>
+                    <option value="en">🇬🇧 English</option>
+                    <option value="fr">🇫🇷 Français</option>
                 </select>
             </div>
             <aside id="sidebar">
