fix: 修正語言選擇器的樣式錯誤，防止重複綁定裝備按鈕事件

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div id="header-area">
             <h1>Egypt Adventures</h1>
             <div id="version-display" style="text-align: center; margin: 5px 0; font-size: 14px; color: #8b6914; font-weight: bold;">Version 1.0.3</div>
-            <div id="language-selector" style="text-align: center; margin: 10px 0;">osition: relative; z-index: 3000;">
+            <div id="language-selector" style="text-align: center; margin: 10px 0; position: relative; z-index: 3000;">
                 <select id="language-select" style="padding: 8px 12px; font-size: 16px; border: 2px solid #8b6914; background: #f4e4c1; cursor: pointer; border-radius: 5px; font-weight: bold; box-shadow: 0 2px 5px rgba(0,0,0,0.2); position: relative; z-index: 3001;">
                     <option value="zh-TW">🇹🇼 繁體中文</option>
                     <option value="en">🇬🇧 English</option>
