--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hant">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
     <title>Egypt Adventures</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -10,7 +10,7 @@
     <div id="game-container">
         <div id="header-area">
             <h1>Egypt Adventures</h1>
-            <div id="version-display" style="text-align: center; margin: 5px 0; font-size: 14px; color: #8b6914; font-weight: bold;">Version 1.1.17</div>
+            <div id="version-display" style="text-align: center; margin: 5px 0; font-size: 14px; color: #8b6914; font-weight: bold;">Version 1.1.18</div>
             <!-- 手機調試面板切換按鈕 -->
             <div style="text-align: center; margin: 8px 0;">
                 <button id="toggle-debug" onclick="var panel = document.getElementById('mobile-debug'); panel.style.display = panel.style.display === 'none' ? 'block' : 'none';" style="background: #333; color: #0f0; border: 2px solid #0f0; padding: 6px 12px; border-radius: 6px; font-size: 12px; cursor: pointer; font-family: monospace;">🐛 調試面板</button>
@@ -98,6 +98,6 @@
         <button id="submit-btn" data-i18n="submit" type="button">送出</button>
     </div>
     <script src="i18n.js"></script>
-    <script src="main.js?v=20251125-8"></script>
+    <script src="main.js?v=20251125-9"></script>
 </body>
 </html>
